# MyDataStorm

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml  repo.bundle
.claude/: settings.local.json
MyDataStorm/: TODO.md  main.py  requirements.txt
MyDataStorm/datastorm/: config.py  types.py
MyDataStorm/datastorm/agents/: planner.py
MyDataStorm/datastorm/database/: connector.py
MyDataStorm/datastorm/evaluation/: evaluator.py
MyDataStorm/datastorm/internet/: search.py
Report Generation/: .gitignore  README.md  benchmark_run_guide.md  benchmark_survey.md  code_agent.py  data_analysis.py  doc_writing.py  main.py  requirements.txt  rewriting.py
Report Generation/human_validation/: get_agent_result.py  招商金额.py  收入.py  楼宇.py
Report Generation/llm/: __init__.py  llm.py
Report Generation/prompts/: data_analysis_system.j2  data_analysis_user.j2  doc_writing_system.j2  doc_writing_user.j2  rewriting_system.j2
Report Generation/run_on_benchmark/: README.md  __init__.py  adapter_daco.py  adapter_insightbench.py  evaluator.py  run.py  unified_scorer.py
Report Generation/utils/: data_inspector.py  file_io.py  helper.py  logger.py  prompt_renderer.py  prompts.py  temp_file.py
datastorm/: config.py  llm_config.example.json  pipeline.py  types.py
datastorm/agents/: executor.py  planner.py
datastorm/evaluation/: evaluator.py
datastorm/llm/: client.py
datastorm/modules/: consistency.py  exploration.py  insight_bank.py  question_logger.py  report.py  warmstart.py
datastorm/prompts/: renderer.py  templates.py
(+11 files in other folders)
